--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Getting To Know Each Other</title>
-</head>
-<body>
-	<h1>Getting to Know Each Other</h1>
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Getting to Know Each Other</title>
+    </head> 
+    <body style="background-color:rgb(0, 179, 255);">Getting to Know Each Other</h1>
+    <h1 style="font-size:30px;">Ahmad Yousuf</h1>
+    <p><a href="mailto: ahmadoyousuf@lewisu.edu">Email</a></p>
+    <p><a href="https://discordapp.com/users/1014347503824552027/">Discord</a></p>
+    <body>
+    </body>
 </html>
+<style>
+    body {margin: 10px; text-align: center;}
+</style>
+
+<img src="IMG_E2034.JPG" class="center" style="width:150px;height:200px">
+
+<h2>Introduction</h2>
+<p>My name is Ahmad Yousuf and I am a junior at Lewis University majoring in Computer Science</p>
+<p>In my family there is me, my parents, my brother and my sister. My brother is 14 and my sister is 24</p>
+<p>My brother is in 8th grade, and my sister graduated with her masters at Northwestern</p>
+
+<h2>What I Hope to Learn in this Course</h2>
+<li>Software Design</li>
+<li>Software Testing</li>
+<li>Software Architecture</li>
+
+<h2>My Favorite Hobby/Activity</h2>
+<p>I love to watch and casually play sports such as basketball, football, and MMA</p>
+<p>Another activity that I really enjoy is playing chess because it sharpens my mind</p>
+<p>I also try to spend time doing a little bit of cooking and art here or there</p>
+
+<h2>Fun Fact</h2>
+<p>A fun fact about me is that I used to train taekwondo when I was younger </p>
+<p>Another fun fact is that I love spending time in Dubai</p>
+<p>I spend a lot of time in Texas during the summer due to family living there</p>
